tag_TodoList案例-删除一个todo

--- a/demo.html
+++ b/demo.html
@@ -9,8 +9,8 @@
 <body>
     <script type="text/javascript">
             let obj = { a: 1, b: 2 }
-            let obj2 = {...obj,b:3}
-            console.log(obj2);
+            delete obj.a
+            console.log(obj);
     </script>
 </body>
 </html>
