--- a/demo.html
+++ b/demo.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script type="text/javascript">
-            let obj = { a: 1, b: 2 }
-            delete obj.a
-            console.log(obj);
+        let obj = { a: { b: { c: 1 } } }
+        let obj2 = { a: { b: 2 } }
+        // const {a:{b:{c}}} = obj
+        // console.log(c);
+
+        /* 
+            连续解构赋值
+        */
+        // const { a: { b } } = obj2
+        // console.log(b);
+
+
+        /* 
+            连续解构赋值并重命名
+        */
+        const { a: { b:data } } = obj2 
+        console.log(data);
     </script>
 </body>
+
 </html>
