tag_前端路由原理

--- a/demo.html
+++ b/demo.html
@@ -9,25 +9,9 @@
 </head>
 
 <body>
-    <script type="text/javascript">
-        let obj = { a: { b: { c: 1 } } }
-        let obj2 = { a: { b: 2 } }
-        // const {a:{b:{c}}} = obj
-        // console.log(c);
-
-        /* 
-            连续解构赋值
-        */
-        // const { a: { b } } = obj2
-        // console.log(b);
-
-
-        /* 
-            连续解构赋值并重命名
-        */
-        const { a: { b:data } } = obj2 
-        console.log(data);
-    </script>
+     <a href="#demo1">跳转到demo1</a>
+     <a href="#demo2">跳转到demo2</a>
+     <a href="#demo3">跳转到demo3</a>
 </body>
 
 </html>
