--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="./css/bootstrap.css">
+    <style>
+        .demo{
+            background: skyblue !important;
+        }
+    </style>
     <title>react脚手架</title>
 </head>
 <body>
