--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- 以下两种定义绝对路径，可以解决BrowserRouter出现多级路由时会找不到样式文件的问题 -->
     <!-- <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.css"> -->
-    <!-- <link rel="stylesheet" href="/css/bootstrap.css"> -->
+    <link rel="stylesheet" href="/css/bootstrap.css">
 
     <!-- 注意：使用BrowserRouter时，此种写法，当出现多级路由时会找不到样式文件
          PS:可以使用HashRouter避免,因为锚点（#）#/yangchengjie/home，后面的资源会被当做前端资源不会发送给服务器
     -->
-    <link rel="stylesheet" href="./css/bootstrap.css">
+    <!-- <link rel="stylesheet" href="./css/bootstrap.css"> -->
     <style>
         .demo{
             background: skyblue !important;
